# sofai

./: .gitignore  Dockerfile  LICENSE  README.md  fly.toml  middleware.ts  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: vercel-deploy.yml
app/: globals.css  layout.tsx  page.tsx
app/[slug]/: page.tsx
app/admin/: admin-dashboard.tsx  page.tsx
app/api/chat/: route.ts
app/api/pioneer-applications/: route.ts
app/apply/: page.tsx
app/corporations/: page.tsx
app/courses/: page.tsx
app/courses/[slug]/: page.tsx
app/courses/deadlines/: page.tsx
app/founder/: page.tsx
app/individuals/: page.tsx
app/institutions/: page.tsx
app/settings/: page.tsx  settings-form.tsx
app/signin/: page.tsx
app/students/: page.tsx
components/agent/: ask-sofai.tsx  sofai-chat.tsx
components/layout/: auth-button.tsx  footer.tsx  navbar.tsx
components/providers/: chat-provider.tsx
components/sections/: apply-form.tsx  audience-page.tsx  audience-pathways.tsx  founder-card.tsx  hero-manifesto.tsx  landing-cta.tsx  movement-thinking.tsx  sister-schools.tsx
components/ui/: button.tsx
lib/: admin-allowlist.ts  admin.ts  apiBase.ts  auth.ts  course-deadlines.ts  courses.ts  knowledge-base.ts  persona.ts  pioneer-applications.ts  pioneers.ts  safe-callback-url.ts  site-config.ts  userProfile.ts  users.ts  utils.ts
lib/auth/: magic-link.ts
lib/sso/: bridgeToken.server.ts  bridgeToken.ts  canonical.ts
src/sof_ai_api/: __init__.py  db.py  ledger.py  main.py  models.py  seed_journal_ai.py  settings.py
types/: next-auth.d.ts
(+22 files in other folders)
