[project]
name = "sof-ai-api"
version = "0.1.0"
description = "sof.ai School of AI — LMS backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.10.0",
]
postgres = [
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "PL"]
# B008 — FastAPI idiom uses Depends() in defaults.
# PLR0913 — we allow routes with many params.
# PLR2004 — comparing to HTTP status codes directly is fine in tests.
# UP045/UP007 — SQLModel works better with Optional[...] than X | None in some versions.
ignore = ["B008", "PLR0913", "PLR2004", "UP045", "UP007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
